@@ -1,98 +1,183 @@
 package org.pgno20.medimart.controller;
 
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Size;
 import org.pgno20.medimart.model.User;
-import org.pgno20.medimart.repository.UserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.pgno20.medimart.service.UserService;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.time.LocalDate;
 import java.util.List;
-import java.util.Map; // REQUIRED for Map.of to work
+import java.util.Map;
+import java.util.stream.Collectors;
 
+/**
+ * Admin-facing REST controller for staff / user account management.
+ *
+ * All operations are routed through UserService to ensure:
+ *  - Password strength validation before hashing with BCrypt
+ *  - Email uniqueness enforced with a clean 400 (not a DB 500)
+ *  - Role injection prevention (only ROLE_USER / ROLE_ADMIN accepted)
+ *  - Consistent soft-delete behaviour (active = false, not hard delete)
+ *
+ * Access is restricted to ROLE_ADMIN by SecurityConfig.
+ */
 @RestController
 @RequestMapping("/api/users")
 public class UserController {
 
-    @Autowired
-    private UserRepository userRepository;
+    private final UserService userService;
 
-    // GET: Load all staff into the table
-       @GetMapping
-        public List<User> getAllUsers() {
-            return userRepository.findAll().stream()
-                    .filter(user -> !"ADMIN".equals(user.getRoleName()))
-                    .toList();
-        }
-
-    // POST: Save a new staff member
-    @PostMapping
-    public ResponseEntity<?> createStaff(@RequestBody User user) {
-        try {
-            // Debugging log in terminal
-            System.out.println("Attempting to save: " + user.getFullName());
-
-            if (user.getPassword() == null || user.getPassword().isEmpty()) {
-                return ResponseEntity.badRequest().body(Map.of("message", "Password is required for new members"));
-            }
-
-            // Ensure status is set
-            if (user.getActive() == null) {
-                user.setActive(true);
-            }
-
-            User savedUser = userRepository.save(user);
-            return ResponseEntity.ok(savedUser);
-        } catch (Exception e) {
-            e.printStackTrace(); 
-            // Returning as a Map ensures the frontend receives JSON, not plain text
-            return ResponseEntity.badRequest().body(Map.of("message", "Database error: " + e.getMessage()));
-        }
+    public UserController(UserService userService) {
+        this.userService = userService;
     }
 
-    // PUT: Update existing staff member
-    @PutMapping("/{id}")
-    public ResponseEntity<?> updateStaff(@PathVariable Long id, @RequestBody User userDetails) {
-        return userRepository.findById(id).map(existingUser -> {
-            try {
-                existingUser.setFullName(userDetails.getFullName());
-                existingUser.setEmail(userDetails.getEmail());
-                existingUser.setDob(userDetails.getDob());
-                existingUser.setGender(userDetails.getGender());
-                existingUser.setRoleName(userDetails.getRoleName());
-                existingUser.setActive(userDetails.getActive());
+    // ──────────────────────────────────────────────────────────────────────────
+    //  Inner request DTOs  (kept local — no need for separate files)
+    // ──────────────────────────────────────────────────────────────────────────
 
-                // Logic: Only update password if a new one is typed in the form
-                if (userDetails.getPassword() != null && !userDetails.getPassword().isEmpty()) {
-                    existingUser.setPassword(userDetails.getPassword());
-                }   
+    /** Payload for creating a new staff / admin account. */
+    static class StaffCreateRequest {
+        @NotBlank(message = "Full name is required")
+        public String fullName;
 
-                userRepository.save(existingUser);
-                return ResponseEntity.ok(Map.of("message", "Update successful"));
-            } catch (Exception e) {
-                return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
-            }
-        }).orElse(ResponseEntity.notFound().build());
+        @NotBlank(message = "Email is required")
+        @Email(message = "Invalid email format")
+        public String email;
+
+        @NotBlank(message = "Password is required")
+        @Size(min = 8, message = "Password must be at least 8 characters")
+        public String password;
+
+        @NotNull(message = "Date of birth is required")
+        public LocalDate dob;
+
+        @NotBlank(message = "Gender is required")
+        public String gender;
+
+        public String roleName;   // defaults to ROLE_USER if blank
     }
 
+    /** Payload for updating an existing account. Password is optional. */
+    static class StaffUpdateRequest {
+        @NotBlank(message = "Full name is required")
+        public String fullName;
 
+        @NotBlank(message = "Email is required")
+        @Email(message = "Invalid email format")
+        public String email;
 
-    // Get = Admin only details
+        @NotNull(message = "Date of birth is required")
+        public LocalDate dob;
+
+        @NotBlank(message = "Gender is required")
+        public String gender;
+
+        public String roleName;   // ROLE_USER or ROLE_ADMIN
+        public Boolean active;    // null = don't change
+
+        /** Leave blank to keep the existing password unchanged. */
+        public String password;
+    }
+
+    // ──────────────────────────────────────────────────────────────────────────
+    //  Endpoints
+    // ──────────────────────────────────────────────────────────────────────────
+
+    /** GET /api/users — all non-admin accounts (staff list in admin panel). */
+    @GetMapping
+    public ResponseEntity<List<Map<String, Object>>> getAllUsers() {
+        List<Map<String, Object>> staff = userService.getAllStaff().stream()
+                .map(this::toSafeMap)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(staff);
+    }
+
+    /** GET /api/users/admins — all admin accounts. */
     @GetMapping("/admins")
-public List<User> getAllAdmins() {
-    // This assumes your roleName string for admins is "ADMIN"
-    return userRepository.findAll().stream()
-            .filter(user -> "ADMIN".equals(user.getRoleName()))
-            .toList();
-}
+    public ResponseEntity<List<Map<String, Object>>> getAllAdmins() {
+        List<Map<String, Object>> admins = userService.getAllAdmins().stream()
+                .map(this::toSafeMap)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(admins);
+    }
 
-    // DELETE: Remove a staff member
+    /** POST /api/users — create a new staff or admin account. */
+    @PostMapping
+    public ResponseEntity<?> createStaff(@Valid @RequestBody StaffCreateRequest req) {
+        try {
+            User saved = userService.createStaff(
+                    req.fullName, req.email, req.password,
+                    req.dob, req.gender, req.roleName
+            );
+            return ResponseEntity.status(HttpStatus.CREATED).body(toSafeMap(saved));
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Map.of("message", "Could not create user"));
+        }
+    }
+
+    /** PUT /api/users/{id} — update an existing staff member. */
+    @PutMapping("/{id}")
+    public ResponseEntity<?> updateStaff(@PathVariable Long id,
+                                          @Valid @RequestBody StaffUpdateRequest req) {
+        try {
+            User updated = userService.updateStaff(
+                    id, req.fullName, req.email,
+                    req.dob, req.gender,
+                    req.roleName, req.active, req.password
+            );
+            return ResponseEntity.ok(toSafeMap(updated));
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Map.of("message", "Could not update user"));
+        }
+    }
+
+    /**
+     * DELETE /api/users/{id} — soft delete (sets active = false).
+     * The account record is preserved for audit purposes; the user
+     * simply cannot log in any more.
+     */
     @DeleteMapping("/{id}")
     public ResponseEntity<?> deleteUser(@PathVariable Long id) {
         try {
-            userRepository.deleteById(id);
-            return ResponseEntity.ok(Map.of("message", "Deleted successfully"));
+            userService.deleteUser(id);
+            return ResponseEntity.ok(Map.of("message", "User deactivated successfully"));
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
         } catch (Exception e) {
-            return ResponseEntity.badRequest().body(Map.of("message", "Could not delete user"));
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Map.of("message", "Could not delete user"));
         }
+    }
+
+    // ──────────────────────────────────────────────────────────────────────────
+    //  Helpers
+    // ──────────────────────────────────────────────────────────────────────────
+
+    /**
+     * Converts a User entity to a safe response map.
+     * The password hash is NEVER included in API responses.
+     */
+    private Map<String, Object> toSafeMap(User user) {
+        return Map.of(
+                "id",       user.getId(),
+                "fullName", user.getFullName(),
+                "email",    user.getEmail(),
+                "dob",      user.getDob() != null ? user.getDob().toString() : "",
+                "gender",   user.getGender(),
+                "roleName", user.getRoleName(),
+                "active",   user.getActive()
+        );
     }
 }
